--- a/css/_login.css
+++ b/css/_login.css
@@ -1,9 +1,10 @@
 main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
+  padding: 50px 0 100px;
 }
 
 main > .content {
@@ -12,9 +13,14 @@ main > .content {
 }
 .big_logo {
   display: block;
-  margin-bottom: 40px;
+  max-width: 320px;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 60px;
 }
-
+.big_logo img {
+  width: 100%;
+}
 #forms {
 }
 #forms label {
@@ -32,11 +38,17 @@ main > .content {
   border-radius: 12px;
   height: 56px;
   background: var(--gray100);
-  margin-bottom: 36px;
   display: flex;
   border: 1px solid transparent;
   position: relative;
 }
+#forms .conBox {
+  position: relative;
+  margin-bottom: 36px;
+  /* height: 0; */
+  /* transition: 1.5; */
+}
+
 #forms .inputbox.on {
   border: 1px solid var(--primary100);
 }
@@ -49,11 +61,14 @@ main > .content {
   outline: none;
 }
 #forms .inputbox .seePw {
-  display:flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 }
-
+#forms .inputbox .seePw img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 #forms .inputbox.err {
   border-color: var(--error);
 }
@@ -61,7 +76,6 @@ main > .content {
   position: absolute;
   left: 0;
   top: 110%;
-  /* position: absolute; */
   display: block;
   text-align: left;
   padding-left: 16px;
@@ -70,7 +84,7 @@ main > .content {
   color: var(--error);
   letter-spacing: -1px;
 }
-#forms button.btn.loginBtn {
+#forms button.btn {
   width: 100%;
   height: 56px;
   background: var(--gray400);
@@ -83,7 +97,7 @@ main > .content {
   margin-bottom: 24px;
   transition: 0.5s;
 }
-#forms button.btn.loginBtn.on {
+#forms button.btn.on {
   cursor: pointer;
   background-color: var(--primary100);
 }
