--- a/css/_style.css
+++ b/css/_style.css
@@ -5,12 +5,12 @@ body {
 
 header {
   width: 100%;
-  height: 7rem;
+  height: 70px;
   position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  border-bottom: 0.1rem solid #dfdfdf;
+  border-bottom: 1px solid #dfdfdf;
   z-index: 999;
   background: #fff;
 }
@@ -20,20 +20,21 @@ header .gnb {
   width: 100%;
   max-width: 1920px;
   justify-content: space-between;
-  padding: 0.9rem 20rem;
+  padding: 9px 200px;
   margin: auto;
 }
 header .loginBtn {
   border: 0;
   display: block;
   text-align: center;
-  width: 12.8rem;
-  height: 4.8rem;
-  border-radius: 0.8rem;
-  padding: 1.2rem 2.3rem;
+  width: 128px;
+  height: 48px;
+  border-radius: 8px;
+  padding: 12px 24px;
   background-color: var(--primary100);
-  font-size: 2em;
+  font-size: 20px;
   font-weight: 600;
+  line-height: 120%;
   color: var(--gray50);
 }
 header .logo img {
@@ -41,7 +42,7 @@ header .logo img {
 }
 
 .visual {
-  height: 54rem;
+  height: 540px;
   width: 100%;
 }
 .visual .content {
@@ -57,7 +58,7 @@ header .logo img {
 }
 .visual .txtBox {
   height: 34rem;
-  margin-right: 1rem;
+  margin-right: 10px;
 }
 .visual .txtBox h2 {
   height: 11.2rem;
@@ -73,7 +74,7 @@ header .logo img {
   max-width: 35.7rem;
   max-height: 5.6rem;
   font-size: 2.3rem;
-  line-height: 3.2rem;
+  line-height: 120%;
   font-weight: 600;
   color: var(--gray50);
   background-color: var(--primary100);
@@ -183,18 +184,187 @@ footer .content .icon img {
   width: 2rem;
 }
 
-@media screen and (max-width: 1024px) {
-  html {
-    font-size: 5px;
+@media screen and (max-width: 1199px) {
+  header {
+  }
+  header .gnb {
+    max-width: 1199px;
+    padding: 9px 16px;
+    margin: auto;
+  }
+  header .loginBtn {
+  }
+  header .logo img {
+    width: 100%;
+    max-width: 153px;
+  }
+
+  .visual {
+    margin-top: 70px;
+    height: 771px;
+  }
+  .visual .content {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .visual .content img {
+    width: 100%;
+    max-width: 740px;
+  }
+  .visual .txtBox {
+    width: 100%;
+  }
+  .visual .txtBox br {
+    display: none;
+  }
+  .visual .txtBox h2 {
+    height: auto;
+    width: 100%;
+    font-size: 40px;
+    font-weight: 700;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .visual .txtBox a {
+    margin: auto;
+  }
+
+  .section {
+    display: flex;
+    align-items: cneter;
+    justify-content: center;
+    width: 100%;
+    height: 72rem;
+    padding: 24px;
+  }
+  .section .content {
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 588px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+  }
+  .section .content img {
+    width: 100%;
+  }
+  .section .content .left {
+  }
+  .section .content .left.txtBox {
+    margin-right: 0;
+    order: 1;
+  }
+  .section .content .txtBox {
+    margin-left: 0;
+    width: 100%;
+  }
+  .section .content .txtBox .abs {
+    width: 100%;
+  }
+  .section .content .txtBox h4 {
+    color: var(--primary100);
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    margin-bottom: 1.5rem;
+  }
+  .section .content .txtBox h2 {
+    font-size: 4rem;
+    line-height: 5.6rem;
+    font-weight: 700;
+    letter-spacing: 2%;
+    color: #374151;
+    margin-bottom: 3.5rem;
+  }
+  .section .content .txtBox p {
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+    font-weight: 500;
+    color: #374151;
+  }
+
+  .bottomVisual {
+    margin-top: 13.8rem;
+  }
+  .bottomVisual img {
+    width: 64.9rem;
+  }
+  .bottomVisual .txtBox {
+    margin-right: 0;
+    height: auto;
+  }
+  .bottomVisual .txtBox h2 br {
+    display: block;
+  }
+
+  footer {
+    width: 100%;
+    height: 16rem;
+    padding: 3.2rem 20rem;
+    background: #111827;
+  }
+  footer .content {
+    max-width: 1920px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.6rem;
+  }
+  footer .content p {
+    color: #9ca3af;
+    line-height: 1.8rem;
+    font-weight: 400;
+  }
+  footer .content .link {
+    width: 15.9rem;
+    display: flex;
+    justify-content: space-between;
+  }
+  footer .content .link a {
+    color: #e5e7eb;
+  }
+  footer .content .icon {
+    width: 11.6rem;
+    display: flex;
+    justify-content: space-between;
+  }
+  footer .content .icon img {
+    width: 2rem;
   }
 }
 
-@media screen and (max-width: 656px) {
+@media screen and (max-width: 743px) {
   br {
     display: none;
   }
+  .visual {
+    height: 540px;
+  }
   .visual .content {
-    padding: 0 3rem;
+    height: auto;
+    padding: 0 16px;
+  }
+  .visual .content h2 br {
+    display: block;
+  }
+  .visual .content .txtBox h2 {
+    margin-bottom: 20px;
+    margin-top: 40px;
+    font-size: 32px;
+    line-height: 140%;
+  }
+  .visual .txtBox {
+    margin-right: 0;
+  }
+  .visual .txtBox a {
+    max-width: 240px;
+    width: 100%;
   }
   .section {
     height: auto;
@@ -203,7 +373,7 @@ footer .content .icon img {
     flex-wrap: wrap;
   }
   .section .content .txtBox {
-    padding: 3rem 0;
+    padding: 16px 0;
   }
   .section .content .left {
     order: 3;
@@ -212,5 +382,3 @@ footer .content .icon img {
     width: 100%;
   }
 }
-
-
