feat: 스프린트미션3 기본요구 사항 - 회원가입 페이지(진행중)
(cherry picked from commit 32fd4aea5ccb4c4f54e63087256258efb60d53ad)

--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -11,6 +11,8 @@ input {
   border-radius: var(--border-radius-lg);
   outline: none;
   border: none;
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-lg);
 }
 
 input::placeholder {
