feat: 스프린트미션3 기본요구 사항 - 회원가입 페이지 유효성 검사, 스프린트 미션2 심회 요구사항 - 비밀번호 확인 아이콘 추가

--- a/styles/base/layout.css
+++ b/styles/base/layout.css
@@ -8,6 +8,21 @@
 .sticky {
   position: sticky;
 }
+.absolute {
+  position: absolute;
+}
+.self-center {
+  align-self: center;
+}
+.justify-self-end	{
+  justify-self: end;
+}
+.appearance-none {
+  appearance: none;
+}
+.cursor-pointer	{
+  cursor: pointer;
+}
 .top-0 {
   top: 0;
 }
@@ -90,6 +105,9 @@
 }
 .pt-35\.5 {
   padding-top: var(--padding-35\.5)
+}
+.pr-6 {
+  padding-right: var(--padding-6);
 }
 .pl-8 {
   padding-left: var(--padding-8);
