--- a/pages/auth/signup/signup.css
+++ b/pages/auth/signup/signup.css
@@ -58,6 +58,11 @@ input:focus {
   margin-bottom: 28px;
 }
 
+.form-email div input,
+.form-nickname div input {
+  width: 100%;
+}
+
 .form-password div,
 .form-password-confirm div {
   position: relative;
@@ -83,6 +88,12 @@ input:focus {
   display: block;
 }
 
+.error > .error {
+  color: var(--input-error-color);
+  padding-top: 8px;
+  padding-left: 8px;
+}
+
 /* 로그인 버튼 */
 
 .form-button {
@@ -98,6 +109,11 @@ input:focus {
 
 .form-button:focus {
   background-color: var(--main-color);
+}
+
+.form-button:disabled {
+  background-color: var(--login-btn-disabled-bg-color);
+  cursor: not-allowed;
 }
 
 /* 간편 로그인 */
