--- a/팬더마켓/style.css
+++ b/팬더마켓/style.css
@@ -81,13 +81,13 @@ h1{
     cursor: pointer;
 }
 
-.so{
+.first{
     height: 54rem;
     background-color: #CFE5FF; 
     display: flex;
 }
 
-.soin{
+.infirst{
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -161,7 +161,7 @@ footer{
     height: 5.1rem;
 }
 
-.test{
+.firstline{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -195,4 +195,12 @@ footer{
     margin-top:24px;
     font-family: pretendard;
     text-align: right;
+}
+
+@media(min-width:743px){
+
+}
+
+@media(min-width:1199px){
+    
 }
