feat: 회원가입 에러 메시지 모달 구현

--- a/pages/auth/signup/signup.css
+++ b/pages/auth/signup/signup.css
@@ -3,6 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  margin: 0px 16px;
 }
 
 main {
@@ -41,9 +42,11 @@ input:focus {
   display: flex;
   justify-content: center;
   margin-bottom: 32px;
+  padding: 0px 70px;
 }
 
 .login-logo-img {
+  width: 100%;
   max-width: 396px;
   max-height: 132px;
 }
@@ -55,7 +58,7 @@ input:focus {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 28px;
+  margin-bottom: 24px;
 }
 
 .form-email div input,
@@ -159,4 +162,27 @@ input:focus {
 
 .signup-container a {
   color: var(--login-signup-font-color);
+}
+
+@media (min-width: 744px) and (max-width: 1199px) {
+  .form-email,
+  .form-nickname,
+  .form-password,
+  .form-password-confirm {
+    margin-bottom: 16px;
+  }
+}
+
+@media (max-width: 743px) {
+  .login-logo {
+    margin-bottom: 16px;
+  }
+
+  .form-email,
+  .form-nickname,
+  .form-password,
+  .form-password-confirm {
+    gap: 8px;
+    margin-bottom: 16px;
+  }
 }
