--- a/styles/home.css
+++ b/styles/home.css
@@ -66,6 +66,7 @@ main {
 .hero-container,
 .banner-container {
   display: flex;
+  flex-wrap: nowrap;
   width: 69.375rem;
   padding: 0 1rem;
 }
@@ -240,7 +241,59 @@ footer {
 }
 
 @media only screen and (min-width: 744px) and (max-width: 1199px) {
+  .hero,
+  .banner {
+    height: fit-content;
+    padding-top: 5.25rem;
+  }
 
+  .hero-container,
+  .banner-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .hero-desc,
+  .banner-desc {
+    text-align: center;
+  }
+
+  .features {
+    height: fit-content;
+  }
+
+  .feature-container {
+    /* flex-wrap: wrap; */
+    gap: 1.5rem;
+    margin: 1.5rem auto;
+    padding: 0 1.5rem;
+  }
+
+  .feature-figure,
+  .banner-figure {
+    flex-basis: max(100%, 22.05rem);
+  }
+
+  .features:nth-child(odd) > .feature-container > .feature-desc > * {
+    padding-right: 0;
+  }
+
+  .features:nth-child(even) > .feature-container > .feature-desc > * {
+    padding-left: 0;
+  }
+
+  .feature-desc {
+    flex-basis: clamp(75%, 15rem, 87.5%);
+    padding: 1rem 0;
+  }
+
+  .feature-desc:nth-child(odd) {
+    justify-content: flex-start;
+  }
+
+  .feature-desc:nth-child(even) {
+    justify-content: flex-end;
+   }
 }
 
 @media only screen and (min-width: 375px) and (max-width: 743px) {
