--- a/팬더마켓/login/login.css
+++ b/팬더마켓/login/login.css
@@ -184,10 +184,19 @@ button:focus{
 
 
 
-@media(min-width:743px){
-  
+@media(max-width:743px){
+    div{
+        max-width: 400px;
+        padding: 0 16px;
+    }
+    .img{
+        max-width: 400px;
+        padding: 0 16px;
+    }
 }
 
-@media(min-width:1199px){
-    
+@media(max-width:1199px){
+    .img{
+        width: 50%;
+    }
 }
