--- a/팬더마켓/signup/signup.css
+++ b/팬더마켓/signup/signup.css
@@ -228,10 +228,19 @@ button:focus{
 
 
 
-@media(min-width:743px){
-
+@media(max-width:743px){
+    div{
+        max-width: 400px;
+        padding: 0 16px;
+    }
+    .logoimg{
+        max-width: 400px;
+        padding: 0 16px;
+    }
 }
 
-@media(min-width:1199px){
-    
+@media(max-width:1199px){
+    .img{
+        width: 50%;
+    }
 }
