--- a/팬더마켓/login/login.css
+++ b/팬더마켓/login/login.css
@@ -179,19 +179,27 @@ button:focus{
     background-color: var(--primary-100-color);
     color: #ffffff;
     margin-top: 1rem;
-    transform: translate(50%, 170%);
+    transform: translate(70%, 150%);
 }
 
 
 
 @media(max-width:743px){
-    div{
+   .main{
         max-width: 400px;
         padding: 0 16px;
     }
     .img{
         max-width: 400px;
         padding: 0 16px;
+    }
+    .modal{
+        max-width: 400px;
+        width: 100%;
+        height: 100%;
+    }
+    .modal-line{
+        flex-wrap: wrap;
     }
 }
 
