--- a/css/style.css
+++ b/css/style.css
@@ -1,505 +1,17 @@
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 @import "reset.css";
 @import "button.css";
+@import "./main-page-css-file/header.css";
+@import "./main-page-css-file/main.css";
+@import "./main-page-css-file/footer.css";
+@import "./main-page-css-file/media-qu.css";
 
 * {
-    margin: 0;
-    padding: 0;
+    font-size: 16px;
+    font-family: 'Pretendard';
     box-sizing: border-box;
 }
 
 body {
     min-width: 375px;
-    font-size: 10px;
-    background: #ffffff;
+    background: var(--white);
 }
-
-.tt {
-    width: 100%;
-    height: 70px;
-    background: #ffffff;
-    display: flex;
-    position: fixed;
-    z-index: 11;
-}
-
-/* 헤더 시작 */
-header {
-    width: calc(100% - 400px);
-    margin-top: 9.5px;
-    display: flex;
-    position: fixed;
-    z-index: 1;
-    align-items: center;
-    justify-content: center;
-    left: 200px;
-    right: 200px;
-    box-sizing: border-box;
-    top: 0px;
-    background: #ffffff;
-}
-
-.test2 {
-    width: calc(100%);
-    min-width: 281px;
-    display: flex;
-    align-items: center;
-    position: relative;
-    justify-content: space-between;
-}
-
-.test2 img {
-    width: 100%;
-    width: 153px;
-    height: auto;
-    box-sizing: border-box;
-
-}
-
-/* 헤더 끝 */
-
-/* 첫번째 섹터 시작 */
-.sec1 {
-    background: #CFE5FF;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: flex-end;
-    box-sizing: border-box;
-}
-
-.sec2 {
-    gap: 7px;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: center;
-    box-sizing: border-box;
-    margin-top: 200px;
-    flex-wrap: wrap;
-}
-
-.sec2 img {
-    max-width: 100%;
-    width: 746px;
-    height: auto;
-    box-sizing: border-box;
-}
-
-.box1 {
-    gap: 32px;
-    opacity: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-top: 40px;
-    margin-bottom: 40px;
-
-    
-}
-
-.text1 {
-    font-family: 'Pretendard', sans-serif;
-    gap: 0;
-    opacity: 1;
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 56px;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    word-break: keep-all;
-    justify-content: flex-start;
-}
-
-/* 첫번째섹터 마무리 */
-
-
-
-/* 두번째섹터 시작 */
-
-.sec3 {
-    background: #FFFFFF;
-    opacity: 1;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-
-}
-
-.box2 {
-    width: 100%;
-    max-width: 988px;
-    display: flex;
-    opacity: 1;
-    position: relative;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 138px;
-    margin-bottom: 138px;
-
-}
-
-.box2 img {
-    max-width: 100%;
-    width: 588px;
-    height: auto;
-
-    box-sizing: border-box;
-}
-
-
-.box3 {
-    gap: 12px;
-    opacity: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-
-}
-
-.box4 {
-    opacity: 1;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1.125rem;
-    font-weight: 700;
-    line-height: 26px;
-    text-align: left;
-    color: #3692FF;
-    box-sizing: border-box;
-
-}
-
-.box5 {
-    opacity: 1;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    box-sizing: border-box;
-}
-
-.box6 {
-    opacity: 1;
-    font-family: 'Pretendard';
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 32px;
-    text-align: left;
-    box-sizing: border-box;
-}
-
-
-/* 두번째섹터 끝 */
-
-
-
-/* 세번째 섹터 시작 */
-.sec4 {
-    background: #ffffff;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-}
-
-
-.box7 {
-    gap: 64px;
-    max-width: 988px;
-    opacity: 0px;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: center;
-    box-sizing: border-box;
-    flex-wrap: wrap;
-    margin-top: 138px;
-    margin-bottom: 138px;
-}
-
-.box8 {
-    gap: 12px;
-    opacity: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-}
-
-.box7 img {
-    max-width: 100%;
-    width: 588px;
-    height: auto;
-
-    box-sizing: border-box;
-}
-
-.box9 {
-    opacity: 0px;
-    color: #3692FF;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1.125rem;
-    font-weight: 700;
-    line-height: 1.625rem;
-    text-align: right;
-    box-sizing: border-box;
-}
-
-.box10 {
-
-    opacity: 0px;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0.02em;
-    text-align: right;
-    color: #374151;
-    box-sizing: border-box;
-    margin-top: 12px;
-
-}
-
-.box11 {
-    opacity: 0px;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 500;
-    line-height: 32px;
-    text-align: right;
-    color: #374151;
-    box-sizing: border-box;
-    margin-top: 24px;
-}
-
-/* 세번째 섹터 끝 */
-
-/* 네번째 섹터 시작 */
-.sec5 {
-    background: #ffffff;
-    opacity: 1;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-}
-
-.box33 {
-    gap: 64px;
-    max-width: 988px;
-    opacity: 0px;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: center;
-    box-sizing: border-box;
-    flex-wrap: wrap;
-    margin-top: 138px;
-    margin-bottom: 138px;
-}
-
-.box33 img {
-    max-width: 100%;
-    width: 588px;
-    height: auto;
-    box-sizing: border-box;
-}
-
-.box12 {
-    gap: 12px;
-    opacity: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 0.5px;
-}
-
-.box13 {
-    opacity: 1;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1.125rem;
-    font-weight: 700;
-    line-height: 1.625rem;
-    text-align: left;
-    color: #3692FF;
-    box-sizing: border-box;
-}
-
-.box14 {
-    opacity: 1;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 3.5rem;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: #374151;
-    box-sizing: border-box;
-}
-
-.box15 {
-    opacity: 1;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1.45rem;
-    font-weight: 500;
-    line-height: 32px;
-    text-align: left;
-    color: #374151;
-    box-sizing: border-box;
-    margin-top: 24px;
-}
-
-/* 네번째 섹터 끝 */
-
-
-
-/* 다섯번째 섹터 시작 */
-.sec6 {
-    background: #CFE5FF;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: flex-end;
-    box-sizing: border-box;
-}
-
-.box16 {
-    gap: 69px;
-    opacity: 1;
-    display: flex;
-    position: relative;
-    justify-content: space-around;
-    align-items: center;
-    box-sizing: border-box;
-    flex-wrap: wrap;
-    margin-top: 143px;
-}
-
-.box16 img {
-    max-width: 100%;
-    width: 746px;
-    height: auto;
-
-    box-sizing: border-box;
-}
-
-.box17 {
-    opacity: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-}
-
-.box18 {
-    opacity: 1;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 2.5rem;
-    font-weight: 700;
-    line-height: 56px;
-    text-align: left;
-    color: #374151;
-    text-align: left;
-    box-sizing: border-box;
-    margin-bottom: 60px;
-}
-
-
-/* 다섯번째섹터 끝 */
-
-/* footer 시작 */
-
-footer {
-    background: #111827;
-    gap: 10px;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: flex-start;
-    opacity: 1;
-}
-
-.box19 {
-    width: calc(100%);
-    min-width: 390px;
-    gap: 0px;
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-    opacity: 0px;
-    margin-top: 32.5px;
-    margin-bottom: 108px;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-
-.box20 {
-    height: 19px;
-    gap: 0px;
-    opacity: 0px;
-    color: #9CA3AF;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 19.09px;
-    text-align: center;
-}
-
-
-.box21 {
-    height: 19px;
-    gap: 30px;
-    opacity: 0px;
-    display: flex;
-    position: relative;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-
-.box22 {
-    height: 20px;
-    gap: 12px;
-    opacity: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-.box23 {
-    height: 19px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 19.09px;
-    text-align: center;
-    color: #E5E7EB;
-    text-decoration-line: none;
-    cursor: pointer;
-}
-
-.box24 {
-    width: 29px;
-    height: 19px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: 'Pretendard', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 19.09px;
-    text-align: center;
-    color: #E5E7EB;
-    cursor: pointer;
-}
-
-/* footer 끝 */
