--- a/css/login.css
+++ b/css/login.css
@@ -1,35 +1,15 @@
 @import "reset.css";
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
-
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: pretendard;
-}
-
-:root {
-    --color1 : #F3F4F6;
-    --color2 : #9CA3AF;
-    --color3 : #E6F2FF;
-    --color4 : #3182F6;
-    --color5 : #3692FF;
-}
 
 .container {
-    min-width: 640px;
-    height: 618px;
+    max-width: 640px;
+    min-height: 482px;
     margin: 231px auto;
-
+    opacity: 1;
     display: flex;
     position: relative;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    opacity: 1;
     box-sizing: border-box;
 }
 
@@ -39,42 +19,57 @@
     background-position: center;
 }
 
-.box1 {
+.main {
     width: 640px;
-    height: 446px;
-    gap: 24px;
     opacity: 1;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-
+    justify-content: center;
 }
 
-.box2 {
-    height: 300px;
-    gap: 24px;
+.main-login {
     opacity: 1;
 }
 
-.box3 {
-    height: 98px;
-    gap: 16px;
+.input-password {
+    width: 575px;
+    height: 50px;
+    font-size: 1rem;
+}
+
+.main-footer {
+    width: 100%;
+    height: 74px;
+    margin-top: 24px;
+    padding: 16px 23px 16px 23px;
+    gap: 10px;
+    border-radius: 8px;
+    opacity: 1;
+    background-color: var(--color3);
+}
+
+
+
+.main-login-email {
     opacity: 1;
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 26px;
     text-align: left;
+
 }
 
-.box4 {
-    height: 98px;
-    gap: 16px;
+.main-login-password {
     opacity: 1;
     margin-top: 24px;
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 26px;
     text-align: left;
+
+    
+
 }
 
 input {
@@ -85,50 +80,16 @@ input {
     border-radius: 12px;
     opacity: 1;
     background: var(--color1);
-    margin-top: 16px;
-    font-family: pretendard;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
     text-align: left;
-
     border: 2px solid var(--color1);
 }
 
-input:focus {
-    outline: 2px solid var(--color5);
-}
 
-.button1 {
-    height: 56px;
-    background-color: var(--color2);
-    padding: 16px 124px 16px 124px;
-    gap: 10px;
-    margin-top: 24px;
-    border-radius: 40px;
-    opacity: 1;
 
-    font-family: pretendard;
-    font-size: 1.25rem;
-    font-weight: 600;
-    line-height: 32px;
-    text-align: center;
-
-    color: var(--color1);
-
-}
-
-.box5 {
-    height: 74px;
-    padding: 16px 23px 16px 23px;
-    gap: 10px;
-    border-radius: 8px;
-    opacity: 1;
-    background-color: var(--color3);
-
-}
-
-.box6 {
+.main-footer-inner {
     height: 42px;
     display: flex;
     flex-direction: row;
@@ -136,11 +97,10 @@ input:focus {
     opacity: 1;
 }
 
-.box7 {
+.main-footer-inner-text {
     height: 26px;
     opacity: 1;
     margin: 8px 0;
-    font-family: Pretendard;
     font-size: 1rem;
     font-weight: 500;
     line-height: 1.625rem;
@@ -148,7 +108,7 @@ input:focus {
 
 }
 
-.box8 {
+.main-footer-inner-icon {
     width: 100px;
     height: 42px;
     opacity: 1;
@@ -166,28 +126,25 @@ input:focus {
     max-height: 42px;
 }
 
-.box9 {
+.dir-signup {
     margin: 0 auto;
     display: flex;
     flex-direction: row;
-    gap : 2px;
+    gap: 2px;
 }
 
-.box10 {
-    font-family: Pretendard;
+.dir-signup-text {
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1.5rem;
     text-align: left;
 }
 
-.box11 {
-    font-family: Pretendard;
+.dir-signup-link {
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1.5rem;
     text-align: left;
-
 }
 
 a {
@@ -202,9 +159,206 @@ a.underline {
     text-decoration: underline;
 }
 
-.input-password {
+.input-Email {
+    width: 100%;
+    height: 50px;
+    font-size: 1rem;
+}
+
+
+
+.pw-img {
     background-image: url('../icon/pwicon1.svg');
     background-size: 24px 24px;
     background-repeat: no-repeat;
-    background-position: right 24px center;
+    background-position: right center;
+    z-index: 1;
+}
+
+
+.done {
+    border: 2px solid black;
+}
+
+
+.email-err {
+    height: 18px;
+    margin-top: 8px;
+    margin-left: 16px;
+    opacity: 1;
+    color: var(--color7);
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 17.9px;
+    text-align: left;
+}
+
+.pw-err {
+    height: 18px;
+    margin-top: 8px;
+    margin-bottom: 24px;
+    margin-left: 16px;
+    opacity: 1;
+    color: var(--color7);
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 17.9px;
+    text-align: left;
+}
+
+button {
+    width: 100%;
+    height: 56px;
+    background-color: var(--color2);
+    padding: 16px 124px 16px 124px;
+    border-radius: 40px;
+    opacity: 1;
+    font-size: 1.25rem;
+    font-weight: 600;
+    line-height: 32px;
+    text-align: center;
+    color: var(--color1);
+}
+
+button.login-btn {
+    height: 56px;
+    background-color: var(--color5);
+    padding: 16px 124px;
+    border-radius: 40px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: var(--color1);
+    border: none;
+    cursor: not-allowed;
+}
+
+button.login-btn:enabled {
+    background-color: var(--color5);
+    cursor: pointer;
+}
+
+.email-contain {
+    width: 100%;
+    height: 56px;
+    border-radius: 12px;
+    margin-top: 10px;
+    background-color: var(--color1);
+
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.password-contain {
+    width: 100%;
+    height: 56px;
+    border-radius: 12px;
+    margin-top: 10px;
+    background-color: var(--color1);
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+
+
+.password-typechange-icon {
+    width: 24px;
+    height: 24px;
+    margin-right: 24px;
+    background-image: url('../icon/pwicon1.svg');
+    background-position: right center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+.custom-alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--white);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 540px;
+    height: 250px;
+    z-index: 3;
+
+    border : 1px solid var(--color2);
+}
+
+.custom-alert button {
+    padding: 10px 20px;
+    background-color: var(--color6);
+    color: var(--white);
+    border-radius: 8px;
+    cursor: pointer;
+
+    margin-top: 50px;
+    margin-left: 370px;
+
+    z-index: 3;
+    width: 120px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.alertText {
+    margin-top: 80px;
+    font-size: 1rem;
+    font-weight: 800;
+    line-height: 19.09px;
+    z-index: 3;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 2;
+}
+
+@media screen and ( max-width: 743px ) { 
+    .container {
+        max-width: 400px;
+        margin: 30px auto;
+        justify-content: center;
+    }
+    
+    .container img {
+        max-width: 380px;
+    }
+    
+    .main-login {
+        max-width: 400px;
+        width : 100%;
+        padding : 0px 16px;
+        margin : 0 auto;
+    }
+
+    .input-password {
+        max-width: 310px;
+    }
+
+    .main-footer {
+        max-width: 400px;
+        margin-top: 24px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
 }
