--- a/css/reset.css
+++ b/css/reset.css
@@ -1,41 +1,37 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,
-small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,
-aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,
-nav,output,ruby,section,summary,time,mark,audio,video {
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
+
+:root {
+  --color1 : #F3F4F6;
+  --color2 : #9CA3AF;
+  --color3 : #E6F2FF;
+  --color4 : #3182F6;
+  --color5 : #3692FF;
+  --white : #FFFFFF;
+  --color6 : #007bff;
+  --color7 : #F74747;
+  --color8 : #CFE5FF;
+  --color9 : #374151;
+  --color10 : #111827;
+  --color11 : #E5E7EB;
+}
+
+
+* {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 16px;
   font: inherit;
+
+  font-family: 'Pretendard';
   vertical-align: baseline;
+  box-sizing: border-box;
 }
-/* HTML5 display-role reset for older browsers */
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,
-nav,section {
-  display: block;
-}
+
 body {
   line-height: 1;
 }
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+
 input:focus {
   outline: none;
 }
