--- a/styles/auth.css
+++ b/styles/auth.css
@@ -1,11 +1,11 @@
-
-/******* mission2 *******/
 /* width:1920px; */
 /* height:1133px */
+
 /* 
 top, left, bottom, right 속성값은 
 position 속성이 static일 때는 무시됩니다.
  */
+ 
  .login-layer{  
   /* background-color: #f10d0d;  */
   width: 640px;
@@ -44,65 +44,103 @@ position 속성이 static일 때는 무시됩니다.
 .login-section2{  
   /* background-color: #33f10d;  */
   width:100%;
-  height: 324px;
+  /* height: 324px; */ /*로그인 버튼이 밑에 침범해서 높이 크기 제한 없앰. */
 }
 
-form {
-  /* margin: 16px auto; */
+.form {  
+  /* background-color:burlywood; */
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap:24px; 
+
   /* justify-content:space-around; */
   /* align-items:center; */
-  gap:24px; 
+  margin: 16px auto;  
 }
 
-.login-label{
+.login-form-control {
+  /* background-color: blueviolet; */
   width:100%;
-  /* height: 42px; */
-  /* gap:10px; */
+  display: flex;
+  flex-direction: column;
+  gap:12px; 
+}
+
+.login-form-control label{
   color: #1F2937;
-  font-weight: 700;
-  /* font-size: 18px;
-  line-height: 26px; */
   font-size: 1.125rem;
   line-height: 1.3rem;
-  text-align:start;
+  font-weight: 700;
+  text-align:start;  
+
+  /* height: 42px; */
+  /* gap:10px; */
+  /* font-size: 18px;
+  line-height: 26px; */
   /* display: block; */  
 }
 
 .input-wrapper {
-  position: relative;
+  position: relative; 
+  /* 상대적인 */
   display: flex;
   align-items: center;
+  /* background-color: red; */
 }
 
 .password-toggle-button {
   position: absolute;
   right: 24px;
+  /* background-color: green; */
 }
 
-.login-input {  
+.login-form-control input {  
   width: 100%;
-  /* height: 56px; */
   border-radius:12px;
   padding:16px 24px 16px 24px;  
-  /* gap:10px; */
   background-color: #F3F4F6;
   color: #9CA3AF;
-  /* display: block; */
-  /* font-size: 16px;
-  line-height: 26px; */
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.3rem;  
   text-align:start;
   border-width:0;  
+
+  /* height: 56px; */
+  /* gap:10px; */
+  /* display: block; */
+  /* font-size: 16px;
+  line-height: 26px; */
 }
 
+.login-form-control input:focus {
+  border-width: 1px;
+  border-color: #3692FF;
+  outline: none;  
+}
 
+.login-form-control.success input {
+  border-color: var(--success-color);
+}
 
-/* 참고 자료 */
+.login-form-control.error input {
+  border-color: var(--error-color);
+}
+
+.login-form-control small {
+  color: var(--error-color);
+  position: relative;
+  bottom: 8px;
+  left: 0;
+  visibility: hidden;
+  /* visibility: visible; */
+}
+
+.login-form-control.error small {
+  visibility: visible;
+}
+
 /* 체크 박스가 선택되어 있으면 인접 형제 요소인 label 태그의 텍스트에 빨간 색 */
 /* <style>
 	input:checked + label{
@@ -118,12 +156,6 @@ form {
     background-color: #9CA3AF;
   }   */
 
-.login-input:focus {
-  border-width: 1px;
-  border-color: #3692FF;
-  outline: none;  
-}
-
 /* .eyes {
   position: absolute;
   top: 0;
@@ -137,19 +169,11 @@ form {
 
 .login-button {  
   width: 100%;
-  /* height: 56px; */
   border-radius:40px;
-  padding:16px 124px 16px 124px;
-  /* gap:10px;   */
-  /* background-color: #9CA3AF; */
-  background-color: #3692FF;
-  outline: none;  
-  /* display: block; */
+  padding:16px 124px 16px 124px;  
+  background-color: #9CA3AF;
+  outline: none;    
   color: #F3F4F6;
-  /* display: block; */
-  /* font-size: 20px;
-  line-height: 32px; */
-  /* font-weight: 600; */
   font-size: 1.25rem;
   /* 버튼이 섹션을 넘어가서 1.2rem으로 줄임 */
   /* line-height: 2rem; */
@@ -157,10 +181,20 @@ form {
   text-align:center;
   border-width:0;
   cursor:pointer;  
+  
+  /* height: 56px; */
+  /* gap:10px;   */  
+  /* background-color: #3692FF; */
+  /* display: block; */
+  /* display: block; */
+  /* font-size: 20px;
+  line-height: 32px; */
+  /* font-weight: 600; */  
 }
 
 .login-button:hover { 
-  background-color: #1967d6;
+  background-color: #3692FF;
+  /* background-color: #1967d6; 더 진한 파랑색 */
   outline: none;  
 }
 
@@ -239,7 +273,7 @@ form {
   /* cursor:pointer; */
 }
 
-.login-section4-signup-membership {
+.login-section4-signup {
   /* width:49px;
   height: 17px; */
   font-weight: 500;
