style: 로그인 페이지 모바일 뷰 max-width 값 추가

--- a/pages/auth/login/login.css
+++ b/pages/auth/login/login.css
@@ -161,6 +161,9 @@ input:focus {
 }
 
 @media (max-width: 743px) {
+  main {
+    max-width: 400px;
+  }
   .login-logo {
     margin-bottom: 16px;
   }
