--- a/pandamarket/landing.css
+++ b/pandamarket/landing.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  width: 100%;
+  width: 100vw;
   height: 70px;
   display: flex;
   flex-direction: row;
@@ -39,7 +39,7 @@ a {
 }
 
 .section1 {
-  width: 100%;
+  width: 100vw;
   height: 540px;
   background-color: #cfe5ff;
   display: flex;
